--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             </div>
 
             <div class="box-white change">
-                <span>Não é "Nome do Usuário</span>
+                <span>Não é Rahman Brussolo</span>
                 <div>
                     <button class="btn-white">Trocar de conta</button>
                     <span>ou</span>
