index correção de texto

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     <img id="img-circle" src="./img/foto-user.jpg" alt="Foto Usuário">
                 </span>
                 <a href="https://www.instagram.com/">
-                    <button type="button" class="btn-blue">Continuar como "Nome Usuario</button>
+                    <button type="button" class="btn-blue">Continuar como Rahman Brussolo</button>
                 </a>
                 <button class="btn-white">Remover Conta</button>
             </div>
